2014-06-25  Ashwin Ravisankar  <ashwinr1993@gmail.com>

	stk_param_relik.m: Add a unit test to check the gradient.

	* paramestim/stk_param_relik.m: Add a unit test.

2014-06-19  Ashwin Ravisankar  <ashwinr1993@gmail.com>

	stk_param_gls.m: A new function to compute the GLS estimator.

	* paramestim/stk_param_gls.m: new function
	* paramestim/stk_param_init.m: modified

2014-06-16  Julien Bect  <julien.bect@supelec.fr>

	make_octave_package.m: Parse 'Description' field from README.

	* admin/make_octave_package.m: Modified to parse 'Description'
	field directly from README (avoids text duplication).
	* admin/octave-pkg/description.txt: Deleted.

2014-06-15  Julien Bect  <julien.bect@supelec.fr>

	stk_paretofind.m: New function to find non-dominated points.

	* arrays/generic/stk_paretofind.m: new function
	* arrays/generic/private/stk_paretofind_mex.c: new mex-function
	* misc/include/pareto.h: new C header
	* config/stk_config_makeinfo.m: modified
	* config/stk_config_path.m: modified
	* admin/octave-pkg/Makefile: modified

2014-06-14  Julien Bect  <julien.bect@supelec.fr>

	README: Include a short description.

	* README: Include a short description (from description.txt)
	* admin/octave-pkg/description.txt: Line-wrapping.

	stk_options_set.m: Add a reset feature.

	* misc/options/stk_options_set.m: Add a reset feature using a
	special case when nargin == 1.
	* misc/options/stk_options_get.m: Just fix spacing.

	stk_options_set.m: Prevent persistent from being cleared.

	* misc/options/stk_options_set.m: Add a call to mlock to prevent
	the persistent variable from being cleared.

2014-05-15  Julien Bect  <julien.bect@supelec.fr>

	stk_model.m: Fix a fresh bug (my mistake).

	* core/stk_model.m: Restore proper default behaviour when
	nargin == 0.

	Merge /etc into /admin

	* etc/CODING_GUIDELINES: moved from
	* admin/CODING_GUIDELINES: moved to
	* etc/RELEASE_CHECKLIST: moved from
	* admin/RELEASE_CHECKLIST: moved to + modified
	* etc/octave-pkg/INDEX: moved from